// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My Book Shelf Favorites Should render correctly snapshot 1`] = `
<div>
  <div
    class="css-1o9ca4y"
  >
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="Don't Make Me Think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            Don't Make Me Think
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Steve Krug
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              2000
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            first
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-1rb83ml"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            In-Shelf
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="Rich Dad Poor Dad"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            Rich Dad Poor Dad
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Robert T. Kiyosaki
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1997
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            second
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-8ji7z5"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            None
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="The Design of Everyday Things"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            The Design of Everyday Things
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Don Norman
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1988
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            fourth
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            TextBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-8ji7z5"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            None
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-1oer8ip"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-iz364c"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`My Book Shelf Favorites Should render correctly snapshot when user has no favorites 1`] = `
<div>
  <div
    class="css-1o9ca4y"
  >
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="Don't Make Me Think"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FQbQgVtG%2Fbook1.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            Don't Make Me Think
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Steve Krug
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              2000
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            first
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-1rb83ml"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            In-Shelf
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="Rich Dad Poor Dad"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2F9qHTtQF%2Fbook2.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            Rich Dad Poor Dad
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Robert T. Kiyosaki
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1997
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            second
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            SelfHelpBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-8ji7z5"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            None
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
    <div
      class="css-1xi27q6"
    >
      <div
        class="css-dk70ac"
      >
        <img
          alt="The Design of Everyday Things"
          data-nimg="1"
          decoding="async"
          fetchpriority="high"
          height="100"
          src="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75"
          srcset="/_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fi.ibb.co%2FLnSBcCM%2Fbook5.png&w=256&q=75 2x"
          style="color: transparent; border-radius: 5px; min-height: 100px;"
          width="75"
        />
        <div
          class="css-j7qwjs"
        >
          <p
            class="chakra-text css-m26pul"
            max-width="180"
            word-wrap="break-word"
          >
            The Design of Everyday Things
          </p>
          <div
            class="css-1709kwd"
          >
            <p
              class="chakra-text css-0"
            >
              Don Norman
              ,
            </p>
            <p
              class="chakra-text css-0"
            >
              1988
            </p>
          </div>
          <p
            class="chakra-text css-0"
          >
            fourth
             Edition
          </p>
        </div>
      </div>
      <div
        class="css-109g2ia"
      >
        <p
          class="chakra-text css-blrpya"
        >
          4.5
          <span
            class="chakra-text css-0"
          >
            /5
          </span>
        </p>
        <div
          class="css-16ol3ha"
        >
          <p
            class="chakra-text css-0"
          >
            TextBook
          </p>
          <p
            class="chakra-text css-0"
          >
            UX Design
          </p>
        </div>
      </div>
      <div
        class="css-1s14tyk"
      >
        <div
          class="css-8ji7z5"
        >
          <p
            class="chakra-text css-1619v3u"
          >
            None
          </p>
        </div>
      </div>
      <div
        class="css-1s3ybnq"
      >
        <button
          aria-label="Heart icon"
          class="chakra-button css-38t1hi"
          data-testid="handle-favorite"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-1k8v1e7"
            focusable="false"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
            />
          </svg>
        </button>
        <button
          class="chakra-button css-4xx2wk"
          data-testid="redirect-preview"
          type="button"
        >
          Preview
        </button>
      </div>
    </div>
  </div>
</div>
`;
